# fastapi-react-spa01

./: .gitignore  pyproject.toml
backend/app/: api.py  crud.py  databass.py  models.py  schemas.py
backend/db/: db.py  model.py
backend/db/mysql/initdb.d/: schema.sql
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: Calendar.jsx  Calendar_compressed.jsx  Calendar_deprecated.jsx  Header.jsx  Todos.jsx
