[tool.poetry]
name = "fastapi-react"
version = "0.1.0"
description = ""
authors = ["ricky-rehivo <readme01.txt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
